--- a/index.html
+++ b/index.html
@@ -16,9 +16,11 @@
         <div class="product-container">
           <div class="product-image">
             <!-- image goes here -->
+           <img v-bind:src="image">
           </div>
           <div class="product-info">
             <h1>{{ product }}</h1>
+            <a :href="url">Product link </a>
           </div>
         </div>
       </div>
